--- a/Höstlovskul/Sierpinskitriangel/style.css
+++ b/Höstlovskul/Sierpinskitriangel/style.css
@@ -1,4 +1,14 @@
 body {
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     overflow: hidden;
     margin: 0;
+}
+
+h1 {
+    color: #ffffff;
+
 }
